RESOLVED FIXED275181
Cleanup LocalFrameViewLayoutContext calls to document
https://bugs.webkit.org/show_bug.cgi?id=275181
Summary Cleanup LocalFrameViewLayoutContext calls to document
Vitor Roriz
Reported 2024-06-05 13:39:02 PDT
We already have a document accessor defined Document* LocalFrameViewLayoutContext::document() const { return frame().document(); }
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-05 13:39:22 PDT
Vitor Roriz
Comment 2 2024-06-05 13:47:55 PDT
EWS
Comment 3 2024-06-05 16:51:02 PDT
Committed 279760@main (00c73058f19e): <https://commits.webkit.org/279760@main> Reviewed commits have been landed. Closing PR #29554 and removing active labels.
Fujii Hironori
Comment 4 2024-06-05 21:17:13 PDT
Regressed: Bug 275192 – REGRESSION(279760@main): ASSERTION FAILED: document()->inHitTesting() in WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange()
Note You need to log in before you can comment on or make changes to this bug.