Cleanup LocalFrameViewLayoutContext calls to document https://bugs.webkit.org/show_bug.cgi?id=275181 rdar://129301712

Reviewed by Simon Fraser.

We already have a document accessor defined in LocalFrameViewLayoutContext.
At some points we call the accessor and at some points we call frame().document().

I think we can unify the behavior and let the compiler decide to inline it.

* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::performLayout):
(WebCore::LocalFrameViewLayoutContext::runOrScheduleAsynchronousTasks):
(WebCore::LocalFrameViewLayoutContext::setNeedsLayoutAfterViewConfigurationChange):
(WebCore::LocalFrameViewLayoutContext::scheduleLayout):
(WebCore::LocalFrameViewLayoutContext::unscheduleLayout):
(WebCore::LocalFrameViewLayoutContext::layoutTimerFired):
(WebCore::LocalFrameViewLayoutContext::canPerformLayout const):
(WebCore::LocalFrameViewLayoutContext::updateStyleForLayout):

Canonical link: https://commits.webkit.org/279760@main